hphp/test/slow/reified_generics/extra-trailling-generic.php.expectf
Fatal error: Function g requires 2 generics but 3 given in %s on line 3
